--- a/index.html
+++ b/index.html
@@ -13,7 +13,36 @@
 </head>
 
 <body>
-
+  <header class="header">
+    <div class="header__wrapper wrapper">
+      <div class="header__line">
+        <div class="header__info">
+          <div class="header__welcome-msg">Hello guys! Welcome to MeShop</div>
+          <div class="header__email">Email: <strong>free@psdfreebies.com</strong></div>
+        </div>
+        <div class="header__switches">
+          <div class="header__lang">EN</div>
+          <div class="header__currency">USD</div>
+        </div>
+      </div>
+      <div class="header__line">
+        <div class="header__logo">MyShop</div>
+        <nav class="header__nav">
+          <ul class="header__nav-list">
+            <li class="header__nav-list-item"><a href="#">Home</a></li>
+            <li class="header__nav-list-item"><a href="#">Shop</a></li>
+            <li class="header__nav-list-item"><a href="#">Product</a></li>
+            <li class="header__nav-list-item"><a href="#">Blog</a></li>
+            <li class="header__nav-list-item"><a href="#">Portfolio</a></li>
+            <li class="header__nav-list-item"><a href="#">Page</a></li>
+          </ul>
+          <div class="header__search"></div>
+          <div class="header__cart"></div>
+          <div class="header__popup"></div>
+        </nav>
+      </div>
+    </div>
+  </header>
 </body>
 
 </html>
