--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
     <div class="header__wrapper wrapper">
       <div class="header__line">
         <div class="header__info">
-          <div class="header__welcome-msg">Hello guys! Welcome to MeShop</div>
-          <div class="header__email">Email: <strong>free@psdfreebies.com</strong></div>
+          <p class="header__welcome-msg unselectable">Hello guys! Welcome to MeShop</p>
+          <p class="header__email">
+            Email: <a class="header__mailto" href="mailto:free@psdfreebies.com">free@psdfreebies.com</a>
+          </p>
         </div>
-        <div class="header__switches">
-          <div class="header__lang">EN</div>
-          <div class="header__currency">USD</div>
+        <div class="header__switches unselectable">
+          <p class="header__lang">EN</p>
+          <p class="header__currency">USD</p>
         </div>
       </div>
       <div class="header__line">
-        <div class="header__logo">MyShop</div>
+        <div class="header__logo unselectable">MyShop</div>
         <nav class="header__nav">
-          <ul class="header__nav-list">
+          <ul class="header__nav-list unselectable">
             <li class="header__nav-list-item"><a href="#">Home</a></li>
             <li class="header__nav-list-item"><a href="#">Shop</a></li>
             <li class="header__nav-list-item"><a href="#">Product</a></li>
@@ -36,9 +38,9 @@
             <li class="header__nav-list-item"><a href="#">Portfolio</a></li>
             <li class="header__nav-list-item"><a href="#">Page</a></li>
           </ul>
-          <div class="header__search"></div>
-          <div class="header__cart"></div>
-          <div class="header__popup"></div>
+          <div class="header__search header__icon"></div>
+          <div class="header__cart header__icon"></div>
+          <div class="header__popup header__icon"></div>
         </nav>
       </div>
     </div>
