--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
       </div>
     </div>
   </header>
+
+  <section class="section-welcome">
+    <div class="section-welcome__wrapper wrapper">
+      <div class="section-welcome__content">
+        <h1 class="section-welcome__label">
+          Fashion <span class="main-colored">carnaval</span>
+          <span class="section-welcome__label-year">2022</span>
+        </h1>
+        <p class="section-welcome__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Blanditiis possimus maiores libero iste facilis perspiciatis quasi,
+          fugiat sit officia architecto.
+        </p>
+      </div>
+      <button class="section-welcome__button button">Shop Now</button>
+    </div>
+  </section>
 </body>
 
 </html>
