--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="section-welcome__wrapper wrapper">
       <div class="section-welcome__content">
         <h1 class="section-welcome__label">
-          Fashion <span class="main-colored">carnaval</span>
+          Fashion <span class="main-colored">carnival</span>
           <span class="section-welcome__label-year">2022</span>
         </h1>
         <p class="section-welcome__text">
