welcome section content

--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
     <div class="section-welcome__wrapper wrapper">
       <div class="section-welcome__content">
         <h1 class="section-welcome__label">
-          Fashion <span class="main-colored">carnival</span>
-          <span class="section-welcome__label-year">2022</span>
+          <span class="section-welcome__label-item">Fashion</span>
+          <span class="section-welcome__label-item main-colored">carnival</span>
+          <span class="section-welcome__label-item section-welcome__label-year">2022</span>
         </h1>
         <p class="section-welcome__text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Blanditiis possimus maiores libero iste facilis perspiciatis quasi,
           fugiat sit officia architecto.
         </p>
+        <button class="section-welcome__button button">Shop Now</button>
       </div>
-      <button class="section-welcome__button button">Shop Now</button>
     </div>
   </section>
 </body>
