html for market section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,56 @@
       </div>
     </div>
   </section>
+
+  <section class="section-market">
+    <div class="section-market__wrapper wrapper">
+      <div class="section-market__content">
+        <div class="section-market__top-bar">
+          <div class="section-market__top-bar-item">
+            <h2 class="section-market__top-bar-item-label">Free Shipping</h2>
+            <p class="section-market__top-bar-item-text">With €50 or more orders</p>
+          </div>
+          <div class="section-market__top-bar-item">
+            <h2 class="section-market__top-bar-item-label">Free Refund</h2>
+            <p class="section-market__top-bar-item-text">100% Refund Within 3 days</p>
+          </div>
+          <div class="section-market__top-bar-item">
+            <h2 class="section-market__top-bar-item-label">Support 24.7</h2>
+            <p class="section-market__top-bar-item-text">Call us anytime you want</p>
+          </div>
+        </div>
+        <div class="section-market__specials specials-gallery">
+          <div class="specials-gallery__card">
+            <h2 class="specials-gallery__card-label">
+              Fashion <span class="main-colored">Carnival</span>
+            </h2>
+            <p class="specials-gallery__card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, voluptatum?
+            </p>
+            <img class="specials-gallery__card-image" src="" alt="">
+          </div>
+          <div class="specials-gallery__card">
+            <h2 class="specials-gallery__card-label">
+              Fashion <span class="main-colored">Carnival</span>
+            </h2>
+            <p class="specials-gallery__card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, voluptatum?
+            </p>
+            <img class="specials-gallery__card-image" src="" alt="">
+          </div>
+        </div>
+        <div class="section-market__popular">
+          <h1 class="section-market__popular-label">
+            Featured products
+          </h1>
+          <p class="section-market__popular-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing.
+          </p>
+          <div class="section-market__popular-slider"></div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
