--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
     <div class="section-market__wrapper wrapper">
       <div class="section-market__content">
         <div class="section-market__top-bar">
-          <div class="section-market__top-bar-item">
+          <div class="section-market__top-bar-item section-market__top-bar-item-shipping">
             <h2 class="section-market__top-bar-item-label">Free Shipping</h2>
             <p class="section-market__top-bar-item-text">With €50 or more orders</p>
           </div>
-          <div class="section-market__top-bar-item">
+          <div class="section-market__top-bar-item section-market__top-bar-item-refund">
             <h2 class="section-market__top-bar-item-label">Free Refund</h2>
             <p class="section-market__top-bar-item-text">100% Refund Within 3 days</p>
           </div>
-          <div class="section-market__top-bar-item">
+          <div class="section-market__top-bar-item section-market__top-bar-item-support">
             <h2 class="section-market__top-bar-item-label">Support 24.7</h2>
             <p class="section-market__top-bar-item-text">Call us anytime you want</p>
           </div>
