refactoring html for market section

--- a/index.html
+++ b/index.html
@@ -81,24 +81,24 @@
             <p class="section-market__top-bar-item-text">Call us anytime you want</p>
           </div>
         </div>
-        <div class="section-market__specials specials-gallery">
-          <div class="specials-gallery__card">
-            <h2 class="specials-gallery__card-label">
+        <div class="section-market__banners">
+          <div class="banner">
+            <h2 class="banner__label">
               Fashion <span class="main-colored">Carnival</span>
             </h2>
-            <p class="specials-gallery__card-text">
+            <p class="banner__text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, voluptatum?
             </p>
-            <img class="specials-gallery__card-image" src="" alt="">
+            <img class="banner__image" src="" alt="">
           </div>
-          <div class="specials-gallery__card">
-            <h2 class="specials-gallery__card-label">
+          <div class="banner">
+            <h2 class="banner__label">
               Fashion <span class="main-colored">Carnival</span>
             </h2>
-            <p class="specials-gallery__card-text">
+            <p class="banner__text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, voluptatum?
             </p>
-            <img class="specials-gallery__card-image" src="" alt="">
+            <img class="banner__image" src="" alt="">
           </div>
         </div>
         <div class="section-market__popular">
