--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
               Fashion <span class="main-colored">Carnival</span>
             </h2>
             <p class="banner__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, voluptatum?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
-            <img class="banner__image" src="" alt="">
+            <button class="banner__button button">Shop Now</button>
           </div>
           <div class="banner">
             <h2 class="banner__label">
               Fashion <span class="main-colored">Carnival</span>
             </h2>
             <p class="banner__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, voluptatum?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
-            <img class="banner__image" src="" alt="">
+            <button class="banner__button button">Shop Now</button>
           </div>
         </div>
         <div class="section-market__popular">
