--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="section-market__banners">
-          <div class="banner">
+          <div class="section-market__banner section-market__banner-1 banner">
             <h2 class="banner__label">
               Fashion <span class="main-colored">Carnival</span>
             </h2>
@@ -88,7 +88,7 @@
             </p>
             <button class="banner__button button">Shop Now</button>
           </div>
-          <div class="banner">
+          <div class="section-market__banner section-market__banner-2 banner">
             <h2 class="banner__label">
               Fashion <span class="main-colored">Carnival</span>
             </h2>
