market section featured block html

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <p class="section-market__top-bar-item-text">Call us anytime you want</p>
           </div>
         </div>
+
         <div class="section-market__banners">
           <div class="section-market__banner section-market__banner-1 banner">
             <h2 class="banner__label">
@@ -98,14 +99,84 @@
             <button class="banner__button button">Shop Now</button>
           </div>
         </div>
-        <div class="section-market__popular">
-          <h1 class="section-market__popular-label">
+
+        <div class="section-market__featured">
+          <h2 class="section-market__featured-label">
             Featured products
-          </h1>
-          <p class="section-market__popular-text">
+          </h2>
+          <p class="section-market__featured-text">
             Lorem ipsum dolor sit amet consectetur adipisicing.
           </p>
-          <div class="section-market__popular-slider"></div>
+          <div class="section-market__featured-slider slider">
+            <div class="slider__item product product_size_big">
+              <div class="product__preview product__preview_size_big">
+                <img class="product__image" src="assets/images/webp/products/product-1.webp" alt="product preview">
+              </div>
+              <p class="product__label">Orange T-shirt</p>
+              <p class="product__brand">Nike</p>
+              <div class="product__rarting">
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star"></div>
+              </div>
+              <p class="product__price">
+                <span class="product__price-old">$74.00</span> $69.00
+              </p>
+            </div>
+            <div class="slider__item product product_size_big">
+              <div class="product__preview product__preview_size_big">
+                <img class="product__image" src="assets/images/webp/products/product-2.webp" alt="product preview">
+              </div>
+              <p class="product__label">Orange T-shirt</p>
+              <p class="product__brand">Nike</p>
+              <div class="product__rarting">
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star"></div>
+              </div>
+              <p class="product__price">
+                <span class="product__price-old">$74.00</span> $69.00
+              </p>
+            </div>
+            <div class="slider__item product product_size_big">
+              <div class="product__preview product__preview_size_big">
+                <img class="product__image" src="assets/images/webp/products/product-3.webp" alt="product preview">
+              </div>
+              <p class="product__label">Orange T-shirt</p>
+              <p class="product__brand">Nike</p>
+              <div class="product__rarting">
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star"></div>
+              </div>
+              <p class="product__price">
+                <span class="product__price-old">$74.00</span> $69.00
+              </p>
+            </div>
+            <div class="slider__item product product_size_big">
+              <div class="product__preview product__preview_size_big">
+                <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+              </div>
+              <p class="product__label">Orange T-shirt</p>
+              <p class="product__brand">Nike</p>
+              <div class="product__rarting">
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star product__star_filled"></div>
+                <div class="product__star"></div>
+              </div>
+              <p class="product__price">
+                <span class="product__price-old">$74.00</span> $69.00
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
