--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 <img class="product__image" src="assets/images/webp/products/product-1.webp" alt="product preview">
               </div>
               <p class="product__label">Orange T-shirt</p>
-              <p class="product__brand">Nike</p>
-              <div class="product__rarting">
+              <p class="product__brand product__brand_margin-bottom_15">Nike</p>
+              <div class="product__rating product__rating_margin-bottom_10">
                 <div class="product__star product__star_filled"></div>
                 <div class="product__star product__star_filled"></div>
                 <div class="product__star product__star_filled"></div>
@@ -130,8 +130,8 @@
                 <img class="product__image" src="assets/images/webp/products/product-2.webp" alt="product preview">
               </div>
               <p class="product__label">Orange T-shirt</p>
-              <p class="product__brand">Nike</p>
-              <div class="product__rarting">
+              <p class="product__brand product__brand_margin-bottom_15">Nike</p>
+              <div class="product__rating product__rating_margin-bottom_10">
                 <div class="product__star product__star_filled"></div>
                 <div class="product__star product__star_filled"></div>
                 <div class="product__star product__star_filled"></div>
@@ -147,8 +147,8 @@
                 <img class="product__image" src="assets/images/webp/products/product-3.webp" alt="product preview">
               </div>
               <p class="product__label">Orange T-shirt</p>
-              <p class="product__brand">Nike</p>
-              <div class="product__rarting">
+              <p class="product__brand product__brand_margin-bottom_15">Nike</p>
+              <div class="product__rating product__rating_margin-bottom_10">
                 <div class="product__star product__star_filled"></div>
                 <div class="product__star product__star_filled"></div>
                 <div class="product__star product__star_filled"></div>
@@ -164,8 +164,8 @@
                 <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
               </div>
               <p class="product__label">Orange T-shirt</p>
-              <p class="product__brand">Nike</p>
-              <div class="product__rarting">
+              <p class="product__brand product__brand_margin-bottom_15">Nike</p>
+              <div class="product__rating product__rating_margin-bottom_10">
                 <div class="product__star product__star_filled"></div>
                 <div class="product__star product__star_filled"></div>
                 <div class="product__star product__star_filled"></div>
