--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
             Lorem ipsum dolor sit amet consectetur adipisicing.
           </p>
           <div class="section-market__featured-slider slider">
+            <div class="slider__nav">
+              <div class="slider__nav-item slider__nav-item_active slider__left"></div>
+              <div class="slider__nav-item slider__nav-item slider__right"></div>
+            </div>
             <div class="slider__item product product_size_big">
               <div class="product__preview product__preview_size_big">
                 <img class="product__image" src="assets/images/webp/products/product-1.webp" alt="product preview">
