news section html

--- a/index.html
+++ b/index.html
@@ -185,6 +185,77 @@
       </div>
     </div>
   </section>
+
+  <section class="section-news">
+    <div class="section-news__wrapper wrapper">
+      <h2 class="section-news__label">Latest news</h2>
+      <p class="section-news__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut quae sunt ex.
+      </p>
+      <div class="section-news__news">
+        <article class="news-card">
+          <div class="news-card__photo">
+            <img class="news-card__image" src="" alt="">
+          </div>
+          <header class="news-card__header">
+            <div class="news-card__label">Lorem ipsum dolor sit.</div>
+            <div class="news-card__postscript">Lorem ipsum dolor sit amet.</div>
+          </header>
+          <p class="news-card__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Neque doloribus facere dicta, nostrum voluptatum inventore.
+          </p>
+          <div class="news-card__bar">
+            <a class="news-card__button" href="">Read More</a>
+            <div class="news-card__icons">
+              <div class="news-card__like"></div>
+              <div class="news-card__comment"></div>
+            </div>
+          </div>
+        </article>
+        <article class="news-card">
+          <div class="news-card__photo">
+            <img class="news-card__image" src="" alt="">
+          </div>
+          <header class="news-card__header">
+            <div class="news-card__label">Lorem ipsum dolor sit.</div>
+            <div class="news-card__postscript">Lorem ipsum dolor sit amet.</div>
+          </header>
+          <p class="news-card__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Neque doloribus facere dicta, nostrum voluptatum inventore.
+          </p>
+          <div class="news-card__bar">
+            <a class="news-card__button" href="">Read More</a>
+            <div class="news-card__icons">
+              <div class="news-card__like"></div>
+              <div class="news-card__comment"></div>
+            </div>
+          </div>
+        </article>
+        <article class="news-card">
+          <div class="news-card__photo">
+            <img class="news-card__image" src="" alt="">
+          </div>
+          <header class="news-card__header">
+            <div class="news-card__label">Lorem ipsum dolor sit.</div>
+            <div class="news-card__postscript">Lorem ipsum dolor sit amet.</div>
+          </header>
+          <p class="news-card__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Neque doloribus facere dicta, nostrum voluptatum inventore.
+          </p>
+          <div class="news-card__bar">
+            <a class="news-card__button" href="">Read More</a>
+            <div class="news-card__icons">
+              <div class="news-card__like"></div>
+              <div class="news-card__comment"></div>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
