news section & news card component

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <div class="section-news__news">
         <article class="news-card">
           <div class="news-card__photo">
-            <img class="news-card__image" src="" alt="">
+            <img class="news-card__image" src="assets/images/webp/news/news-pic-1.webp" alt="news preview">
           </div>
           <header class="news-card__header">
             <div class="news-card__label">Lorem ipsum dolor sit.</div>
@@ -206,16 +206,16 @@
             Neque doloribus facere dicta, nostrum voluptatum inventore.
           </p>
           <div class="news-card__bar">
-            <a class="news-card__button" href="">Read More</a>
+            <a class="news-card__button button" href="">Read More</a>
             <div class="news-card__icons">
-              <div class="news-card__like"></div>
-              <div class="news-card__comment"></div>
+              <div class="news-card__icon news-card__like"></div>
+              <div class="news-card__icon news-card__comment"></div>
             </div>
           </div>
         </article>
         <article class="news-card">
           <div class="news-card__photo">
-            <img class="news-card__image" src="" alt="">
+            <img class="news-card__image" src="assets/images/webp/news/news-pic-2.webp" alt="news preview">
           </div>
           <header class="news-card__header">
             <div class="news-card__label">Lorem ipsum dolor sit.</div>
@@ -226,16 +226,16 @@
             Neque doloribus facere dicta, nostrum voluptatum inventore.
           </p>
           <div class="news-card__bar">
-            <a class="news-card__button" href="">Read More</a>
+            <a class="news-card__button button" href="">Read More</a>
             <div class="news-card__icons">
-              <div class="news-card__like"></div>
-              <div class="news-card__comment"></div>
+              <div class="news-card__icon news-card__like"></div>
+              <div class="news-card__icon news-card__comment"></div>
             </div>
           </div>
         </article>
         <article class="news-card">
           <div class="news-card__photo">
-            <img class="news-card__image" src="" alt="">
+            <img class="news-card__image" src="assets/images/webp/news/news-pic-3.webp" alt="news preview">
           </div>
           <header class="news-card__header">
             <div class="news-card__label">Lorem ipsum dolor sit.</div>
@@ -246,10 +246,10 @@
             Neque doloribus facere dicta, nostrum voluptatum inventore.
           </p>
           <div class="news-card__bar">
-            <a class="news-card__button" href="">Read More</a>
+            <a class="news-card__button button" href="">Read More</a>
             <div class="news-card__icons">
-              <div class="news-card__like"></div>
-              <div class="news-card__comment"></div>
+              <div class="news-card__icon news-card__like"></div>
+              <div class="news-card__icon news-card__comment"></div>
             </div>
           </div>
         </article>
