sale section html

--- a/index.html
+++ b/index.html
@@ -256,6 +256,49 @@
       </div>
     </div>
   </section>
+
+  <section class="section-sale">
+    <div class="section-sale__wrapper wrapper">
+      <div class="section-sale__content">
+        <div class="section-sale__grid">
+          <div class="section-sale__block">
+            <h2 class="section-sale__block-label">Our brands</h2>
+            <div class="section-sale__products">
+              <div class="product"></div>
+              <div class="product"></div>
+              <div class="product"></div>
+              <div class="product"></div>
+            </div>
+          </div>
+          <div class="section-sale__block section-sale__static-banner">
+            <img class="section-sale__banner-image" src="assets/images/webp/sale-banner.webp"
+              alt="Summer Sale 80% banner">
+          </div>
+          <div class="section-sale__block">
+            <h2 class="section-sale__block-label">Our brands</h2>
+            <div class="section-sale__products">
+              <div class="product"></div>
+              <div class="product"></div>
+              <div class="product"></div>
+              <div class="product"></div>
+            </div>
+          </div>
+        </div>
+        <div class="section-sale__mailing">
+          <h2 class="section-sale__mailing-label">
+            Never miss any fashion trending
+          </h2>
+          <p class="section-sale__mailing-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facilis.
+          </p>
+          <form class="section-sale__mailing-form mailing-form form">
+            <input name="email" type="email" required>
+            <input type="submit" value="Subscribe">
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
