--- a/index.html
+++ b/index.html
@@ -264,10 +264,74 @@
           <div class="section-sale__block">
             <h2 class="section-sale__block-label">Our brands</h2>
             <div class="section-sale__products">
-              <div class="product"></div>
-              <div class="product"></div>
-              <div class="product"></div>
-              <div class="product"></div>
+              <div class="section-sale__product product product_size_small">
+                <div class="product__preview product__preview_size_small">
+                  <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+                </div>
+                <p class="product__label">Orange T-shirt</p>
+                <p class="product__brand product__brand_margin-bottom_5 product__brand_style_light">Nike</p>
+                <div class="product__rating product__rating_margin-bottom_15">
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star"></div>
+                </div>
+                <p class="product__price product__price_color_main">
+                  <span class="product__price-old">$74.00</span> $69.00
+                </p>
+              </div>
+              <div class="section-sale__product product product_size_small">
+                <div class="product__preview product__preview_size_small">
+                  <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+                </div>
+                <p class="product__label">Orange T-shirt</p>
+                <p class="product__brand product__brand_margin-bottom_5 product__brand_style_light">Nike</p>
+                <div class="product__rating product__rating_margin-bottom_15">
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star"></div>
+                </div>
+                <p class="product__price product__price_color_main">
+                  <span class="product__price-old">$74.00</span> $69.00
+                </p>
+              </div>
+              <div class="section-sale__product product product_size_small">
+                <div class="product__preview product__preview_size_small">
+                  <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+                </div>
+                <p class="product__label">Orange T-shirt</p>
+                <p class="product__brand product__brand_margin-bottom_5 product__brand_style_light">Nike</p>
+                <div class="product__rating product__rating_margin-bottom_15">
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star"></div>
+                </div>
+                <p class="product__price product__price_color_main">
+                  <span class="product__price-old">$74.00</span> $69.00
+                </p>
+              </div>
+              <div class="section-sale__product product product_size_small">
+                <div class="product__preview product__preview_size_small">
+                  <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+                </div>
+                <p class="product__label">Orange T-shirt</p>
+                <p class="product__brand product__brand_margin-bottom_5 product__brand_style_light">Nike</p>
+                <div class="product__rating product__rating_margin-bottom_15">
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star"></div>
+                </div>
+                <p class="product__price product__price_color_main">
+                  <span class="product__price-old">$74.00</span> $69.00
+                </p>
+              </div>
             </div>
           </div>
           <div class="section-sale__block section-sale__static-banner">
@@ -277,10 +341,74 @@
           <div class="section-sale__block">
             <h2 class="section-sale__block-label">Our brands</h2>
             <div class="section-sale__products">
-              <div class="product"></div>
-              <div class="product"></div>
-              <div class="product"></div>
-              <div class="product"></div>
+              <div class="section-sale__product product product_size_small">
+                <div class="product__preview product__preview_size_small">
+                  <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+                </div>
+                <p class="product__label">Orange T-shirt</p>
+                <p class="product__brand product__brand_margin-bottom_5 product__brand_style_light">Nike</p>
+                <div class="product__rating product__rating_margin-bottom_15">
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star"></div>
+                </div>
+                <p class="product__price product__price_color_main">
+                  <span class="product__price-old">$74.00</span> $69.00
+                </p>
+              </div>
+              <div class="section-sale__product product product_size_small">
+                <div class="product__preview product__preview_size_small">
+                  <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+                </div>
+                <p class="product__label">Orange T-shirt</p>
+                <p class="product__brand product__brand_margin-bottom_5 product__brand_style_light">Nike</p>
+                <div class="product__rating product__rating_margin-bottom_15">
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star"></div>
+                </div>
+                <p class="product__price product__price_color_main">
+                  <span class="product__price-old">$74.00</span> $69.00
+                </p>
+              </div>
+              <div class="section-sale__product product product_size_small">
+                <div class="product__preview product__preview_size_small">
+                  <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+                </div>
+                <p class="product__label">Orange T-shirt</p>
+                <p class="product__brand product__brand_margin-bottom_5 product__brand_style_light">Nike</p>
+                <div class="product__rating product__rating_margin-bottom_15">
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star"></div>
+                </div>
+                <p class="product__price product__price_color_main">
+                  <span class="product__price-old">$74.00</span> $69.00
+                </p>
+              </div>
+              <div class="section-sale__product product product_size_small">
+                <div class="product__preview product__preview_size_small">
+                  <img class="product__image" src="assets/images/webp/products/product-4.webp" alt="product preview">
+                </div>
+                <p class="product__label">Orange T-shirt</p>
+                <p class="product__brand product__brand_margin-bottom_5 product__brand_style_light">Nike</p>
+                <div class="product__rating product__rating_margin-bottom_15">
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star product__star_filled"></div>
+                  <div class="product__star"></div>
+                </div>
+                <p class="product__price product__price_color_main">
+                  <span class="product__price-old">$74.00</span> $69.00
+                </p>
+              </div>
             </div>
           </div>
         </div>
